<resources>
    <string name="app_name">Internet Cookbook</string>
    <string name="my_recipes">My Recipes:</string>
    <string name="create_user">Create User</string>
    <string name="email">Email</string>
    <string name="log_into_my_cookbook">Log into My Cookbook:</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="button">Button</string>
    <string name="sign_out">Sign Out</string>
    <string name="cook_time">Cook Time:</string>
    <string name="dish_type">Dish Type:</string>
    <string name="name">Name:</string>
    <string name="new_recipe">New Recipe</string>
    <string name="add_recipe2">Add Recipe</string>
    <string name="copy_web_address_here">Copy Web Address Here</string>
    <string name="estimated_cook_time">Estimated Cook Time:</string>
    <string name="name2">Name</string>
    <string name="recipe_name">Recipe Name:</string>
    <string name="search_web">Search Web</string>
    <string name="select_dish_type">Select Dish Type:</string>
    <string name="web_address_optional">Web Address (Optional):</string>
    <string name="whole_number">Whole Number</string>
    <string-array name="dish_type_list">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Dinner</item>
        <item>Dessert</item>
    </string-array>
</resources>
