<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="finalproject.rlovelett.internetcookbook.AddRecipe"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        tools:ignore="UselessParent">

        <TextView
            android:text="@string/new_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_weight="0.06" />

        <TextView
            android:text="@string/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            android:layout_weight="0.06"
            android:hint="@string/name2" />

        <TextView
            android:text="@string/estimated_cook_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="0.06" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTime"
            android:layout_weight="0.06"
            android:fontFamily="sans-serif"
            android:hint="@string/whole_number" />

        <TextView
            android:text="@string/select_dish_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="0.06" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDishType"
            android:layout_weight="0.06"
            android:spinnerMode="dropdown"
            android:entries="@array/dish_type_list" />

        <TextView
            android:text="@string/web_address_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="0.06" />

        <Button
            android:text="@string/search_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonWeb"
            android:layout_weight="0.06" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextWebAddress"
            android:layout_weight="0.06"
            android:hint="@string/copy_web_address_here" />

        <Button
            android:text="@string/add_recipe2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAdd"
            android:layout_weight="0.06"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>
