<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="finalproject.rlovelett.internetcookbook.MainActivity"
    android:orientation="horizontal"
    tools:ignore="DisableBaselineAlignment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:ignore="InefficientWeight,UselessParent">

        <TextView
            android:text="@string/log_into_my_cookbook"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:id="@+id/textViewTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:textSize="18sp"
            tools:ignore="NestedWeights" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:layout_weight="1"
            android:textSize="18sp"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextPass"
            android:layout_weight="1"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLogin"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/create_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCreateUser"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
